FIX slimcharcoal theme to have a pure white background, general views were that the background was too dark

--- a/css/Col-slimcharcoal.css
+++ b/css/Col-slimcharcoal.css
@@ -1,6 +1,6 @@
 
 /* Colour Theme Changes */
-body,html {color:#383838;background: #F0F0F0;}
+body,html {color:#383838;background: #FFF;}
 h1 {color: #383838;}
 h2 {color: #383838;}
 
